--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html><html lang='ja'><meta charset='utf-8'/>
 <head>
-  <title>ぜってぇみんなよ</title>
+  <title>炊いとる</title>
   <meta property="og:title" content="たいとる" />
   <meta property="og:description" content="せつめいせつめい" />
   <meta name="theme-color" content="#ECECF7" />
@@ -19,7 +19,7 @@
 </head>
 <body>
   <div class=header>
-    <h1>たいとる</h1>
+    <h1>炊いとる</h1>
     <div>せつめいせつめい</div>
   </div>
   <div class=main>
