ごはんさん

--- a/index.html
+++ b/index.html
@@ -20,25 +20,25 @@
 <body>
   <div class=header>
     <h1>炊いとる</h1>
-    <div>せつめいせつめい</div>
+    <div>ごはんごはん</div>
   </div>
   <div class=main>
     <div>
-      <h2>さぶたいとる１</h2>
+      <h2>めしめし</h2>
       <div>
-        ほんぶん１
+        ごはん食べなきゃ友達いなくな〜ちゃう!　ごはん ごはん
       </div>
     </div>
 
     <div>
-      <h2>さぶたいとる２</h2>
+      <h2>こめこめ</h2>
       <div>
-        ほんぶん２
+        お米一粒には神様が7人いてその7人の神様が食べた一膳のごはんの一粒一粒にも7人の神様がいるのでその一膳の中のその数千人の神様一人ひとりが食べた一膳のごはんの米粒一粒一粒にも神様7人のがいるらしいよ。
       </div>
     </div>
   </div>
   <div class=footer>
-    ふったー
+    maimai
   </div>
 </body>
 </html>
