--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
   <title>炊いとる</title>
   <meta property="og:title" content="たいとる" />
-  <meta property="og:description" content="せつめいせつめい" />
+  <meta property="og:description" content="米米CLUB" />
   <meta name="theme-color" content="#ECECF7" />
   <meta name="msapplication-TileColor" content="#ECECF7" />
   <link rel="icon" type="image/png" xhref="icon.png" />
