ごはんですよ

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html><html lang='ja'><meta charset='utf-8'/>
 <head>
-  <title>炊いとる</title>
+  <title>ごはんですよ</title>
   <meta property="og:title" content="たいとる" />
   <meta property="og:description" content="米米CLUB" />
   <meta name="theme-color" content="#ECECF7" />
@@ -26,7 +26,7 @@
     <div>
       <h2>めしめし</h2>
       <div>
-        ごはん食べなきゃ友達いなくな〜ちゃう!　ごはん ごはん
+        ごはん食べなきゃ友達いなくな〜ちゃう!　ごはっ ごはっごはっ
       </div>
     </div>
 
@@ -38,7 +38,7 @@
     </div>
   </div>
   <div class=footer>
-    maimai
+   米米CLUB
   </div>
 </body>
 </html>
