湖畔ですよ

--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
     <div>
       <h2>こめこめ</h2>
       <div>
-        お米一粒には神様が7人いてその7人の神様が食べた一膳のごはんの一粒一粒にも7人の神様がいるのでその一膳の中のその数千人の神様一人ひとりが食べた一膳のごはんの米粒一粒一粒にも神様7人のがいるらしいよ。
+        お米一粒には神様が7人いてその7人の神様が食べた一膳のごはんの一粒一粒にも7人の神様がいるからさ その一膳の中のその数千人の神様一人ひとりが食べた一膳のごはんの米粒一粒一粒にも神様7人,
+        いるらしいよ。
       </div>
     </div>
   </div>
