--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 <body>
   <div class=header>
     <h1>炊いとる</h1>
+    style="background: rgb(255,200,200);"
     <div>ごはんごはん</div>
   </div>
   <div class=main>
