--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <link rel="stylesheet" href="index.css"/>
 </head>
 <body>
+  <body style="background: rgb(255,200,200);">
   <div class=header>
     <h1>炊いとる</h1>
     <body style="background: rgb(255,200,200);">
