--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   
   <body style="background: rgb(255,200,200);">
   <div class=header>
-    <img src="スクリーンショット 2020-07-28 21.31.24.png">　<img src="IMG_3882.jpg">
+    <img src="RPReplay_Final1596256044.mov
     <h1>炊いとる</h1>
     <div>ごはんごはん</div>
   </div>
