--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   
   <body style="background: rgb(255,200,200);">
   <div class=header>
-    <img src="IMG_3882.jpg">
+   <video src="RPReplay_Final1596256044.mov"></video>
     <h1>炊いとる</h1>
     <div>ごはんごはん</div>
   </div>
