ご飯ですと

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   
   <body style="background: rgb(255,200,200);">
   <div class=header>
-   <img src="IMG_3882.jpg">
+   <img src="スクリーンショット 2020-07-28 21.31.24.png" style="width: 80vw">
     <h1>炊いとる</h1>
     <div>ごはんごはん</div>
   </div>
